# docquery-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs  routes.rs
src/utils/: chunker.rs  data.rs  docgpt.rs  helpers.rs  mod.rs  pdfquery.rs
