[package]
name = "docgpt"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
actix-web = "4.3.1"
lazy_static = "1.4.0"
lopdf = "0.30.0"
redis = "0.23.0"
regex = "1.7.3"
reqwest = {version = "0.11.17", features = ["blocking", "json"]}
serde = {version = "1.0.162", features = ["derive"]}
serde_json = "1.0.96"
thiserror = "1"
uuid = { version = "1.3.1", features = ["v4", "fast-rng"]}
