[package]
name = "docgpt"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
actix-web = "4.3.1"
lazy_static = "1.4.0"
lopdf = "0.30.0"
ndarray = "0.15.6"
openai-api-rs = "0.1.7"
rayon = "1.7.0"
regex = "1.7.3"
rust-bert = "0.20.0"
serde = "1.0.162"
tokio = "1.28.0"
uuid = { version = "1.3.1", features = ["v4", "fast-rng"]}
