[package]
name = "docgpt"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
crossbeam = "0.8.2"
image = "0.24.6"
lazy_static = "1.4.0"
lopdf = "0.31.0"
ndarray = "0.15.6"
object-pool = "0.5.4"
openai-api-rs = "0.1.7"
rayon = "1.7.0"
regex = "1.7.3"
rust-bert = {version="0.21.0", features=["download-libtorch"]}
serde = "1.0.162"
tokio = "1.28.0"
uuid = { version = "1.3.1", features = ["v4", "fast-rng"]}
